--- a/src/components/SearchResult/SearchResult.css
+++ b/src/components/SearchResult/SearchResult.css
@@ -1,3 +1,21 @@
+.result-list {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 900px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.result-item {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
 .char-image {
-  width: 50px;
+  width: 200px;
 }
