--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
 
@@ -24,6 +23,10 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+
+li {
+  list-style: none;
 }
 
 body {
