feat: add ErrorBoundary component

--- a/src/components/Spinner/Spinner.css
+++ b/src/components/Spinner/Spinner.css
@@ -5,7 +5,7 @@
   display: block;
   margin: 15px auto;
   position: relative;
-  color: #fff;
+  color: #10b5d0;
   box-sizing: border-box;
   animation: animloader 1s linear infinite alternate;
 }
