--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,3 +1,10 @@
+.section-search {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+}
+
 .search-input {
   padding: 0.7rem 2rem;
   border-radius: 5px;
