--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 header {
   display: flex;
+  gap: 30px;
   width: 100%;
   height: 70px;
   justify-content: space-between;
@@ -8,4 +9,10 @@ header {
 
 .header-logo {
   height: 70px;
+}
+
+@media (max-width: 450px) {
+  .header-logo {
+    height: 50px;
+  }
 }
