--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 #root {
-  width: 100%;
   display: flex;
   flex-direction: column;
   font-family: 'Raleway', sans-serif;
@@ -29,11 +28,24 @@ li {
   list-style: none;
 }
 
+html {
+  width: 100%;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
 body {
-  margin: 0;
-  display: flex;
-  min-width: 320px;
+  width: 100%;
+  height: 100%;
   min-height: 100vh;
+  overflow-y: auto;
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  position: relative;
 }
 
 h1 {
@@ -51,5 +63,17 @@ h1 {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media (max-width: 800px) {
+  h1 {
+    font-size: 1.5em;
+  }
+}
+
+@media (max-width: 450px) {
+  h1 {
+    font-size: 1em;
   }
 }
