--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  padding: 2rem;
 }
 
 .logo {
@@ -38,4 +38,12 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
