feat: add CharacterDetails component

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -18,6 +18,10 @@
   outline: none;
 }
 
+.master-detail {
+  display: flex;
+}
+
 @media (max-width: 450px) {
   .search-input {
     padding: 0.7rem 1rem;
