--- a/src/components/CharacterDetails/CharacterDetails.css
+++ b/src/components/CharacterDetails/CharacterDetails.css
@@ -1,4 +1,26 @@
+.details-wrapper {
+  flex-basis: 40%;
+  width: 100%;
+  box-sizing: border-box;
+}
+
 .char-details-wrapper {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 20px;
+  border: 4px solid #d1e25f;
+  border-radius: 8px;
+  transition: transform 0.2s ease;
+}
+
+.char-details-image {
+  width: 100%;
+  max-width: 300px;
+}
+
+.char-details-name {
+  font-size: 18px;
+  font-weight: bold;
 }
