--- a/src/components/SearchResult/SearchResult.css
+++ b/src/components/SearchResult/SearchResult.css
@@ -9,9 +9,16 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  flex-basis: 60%;
+  box-sizing: border-box;
+  padding: 20px;
+  border: 4px solid #d1e25f;
+  border-radius: 8px;
+  transition: transform 0.2s ease;
 }
 
 .result-item {
+  max-width: 150px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -19,5 +26,14 @@
 }
 
 .char-image {
-  width: 200px;
+  width: 150px;
+}
+
+.single-column {
+  flex-basis: 100%;
+  max-width: 900px;
+  padding: 20px;
+  border: 4px solid #d1e25f;
+  border-radius: 8px;
+  transition: transform 0.2s ease;
 }
