--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ body {
 }
 
 h1 {
-  font-size: 2.2em;
+  font-size: 25px;
   line-height: 1.1;
 }
 
@@ -71,14 +71,14 @@ h1 {
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 650px) {
   h1 {
-    font-size: 1.5em;
+    font-size: 20px;
   }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 580px) {
   h1 {
-    font-size: 1em;
+    font-size: 15px;
   }
 }
